# OpenGLSandbox

./: CMakeLists.txt  LICENSE  main.cpp
Tests/: CMakeLists.txt  PhysXTests.cpp  Voxel_mesh_generator_tests.cpp  unit_tests.cpp
lib/PhysX/: PhysXCommon_64.lib  PhysXFoundation_64.lib
src/: Face.h  Line.fs  LineDrawer.h  Physics_engine.h  Placeble_object.h  Texture.h  Vertex.h  Vertex_array.h  Voxel_chunk.h  Voxel_mesh_generator.cpp  Voxel_mesh_generator.h  World.h  camera_class.cpp
